feat(delta): make the canonical identity map authoritative for Delta
Switches Delta to CID_CANONICAL_MAP and starts trusting the map recorded by the
previous change. Schema emission, statistics, constraints and page-index
selection now take column ids from the snapshot's identity map instead of
hashing a path and ordinal, and capture refuses to run without one rather than
reconstructing a map from a single snapshot -- an unmapped table's ids depend on
its whole version chain, so a locally rebuilt map would disagree with every
statistic already captured.

Every statistics record carries the fingerprint of the map its ids came from.
The fingerprint travels onto the snapshot manifest entry, the table pin, and the
planner result, and is compared before any record is served: a record captured
under a different mapping is returned as missing rather than silently attributed
to whichever column now holds that id. Rollups refuse to merge records from
different mappings. It also enters the pin's cache identity and the capture-reuse
signature, so a mapping change invalidates reuse and forces recapture -- which is
the intended cost of a mapped rename.

Iceberg is untouched: it keeps CID_FIELD_ID, records no map, and its empty
fingerprint compares equal on both sides.

The superseded Delta capture overloads are removed. Two remain because the SPI
declares them abstract; they now refuse with a message naming the identity-map
overload instead of fabricating an identity.